main.css
* {
    margin: 0;
    padding: 0;
}

body,
html {
    height: 100%;
    /* font-family: "Didact Gothic", sans-serif; */
    font-family: "DotGothic16", Arial, Helvetica, sans-serif;
    color: #209456;
    text-decoration: none;
    line-height: 1.6;
    font-size: 17px;
}

.bg {
    /* The image used */
    background-image: url("https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
    background-color: black;

    /* Full height */
    height: 100%;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* to change background image opacity, add overlay with reduced opacity and background-color on top of background image as a pseudo-element */
.bg::before {
    /* have to have content or it won't show on the page! okay to leave content as an empty string here */
    content: "";
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    background-color: rgba(0, 0, 0, 0.5);
}

.hero {
    position: relative;
    height: 100vh;
    width: 100%;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
}

header {
    background-color: black;
    padding: 50px;
}

.hero h1 {
    font-size: 75px;
    margin-bottom: 20px;
}

img {
    height: 480px;
    width: auto;
}

.hero h2 {
    font-size: 50px;
    margin-bottom: 10px;
}

.hero h4 {
    font-size: 35px;
    margin-bottom: 20px;
}

.hero h6 {
    font-size: 25px;
    margin-bottom: 20px;
}

.hero p {
    font-size: 20px;
}

#projects {
    background-color: black;
    display: flex;
    justify-content: center;
    text-align: center;
}

#projects div {
    padding: 20px;
}

#socialMedia {
    background-color: black;
    border: none;
}

.project1,
.project2,
.project3 {
    border: medium dashed #209456;
}

@media (max-width: 500px) {
    header {
        margin-top: 20px;
        padding: 25px;
    }
    img {
        height: 240px;
        width: 180px;
    }
    .hero h1 {
        font-size: x-large;
    }
    .hero h2 {
        font-size: larger;
    }
    .hero h4 {
        font-size: large;
    }
    .hero h6 {
        font-size: medium;
    }
    .hero p {
        font-size: small;
    }
    #projects {
        flex-direction: column;
    }
}

